# compute

./: .gitignore  README.md
cpp/: .clang-format
cpp/kompute/: CMakeLists.txt  Makefile  README.md
cpp/kompute/basic/: CMakeLists.txt  basic.comp.glsl  basic.cpp  main.cpp
cpp/kompute/basic/src/: main.cpp
cpp/kompute/info/: info.cpp
python/cuda/: Makefile  README.md  cuda_add.cu  main.py
python/kompute/: Makefile  README.md  requirements.txt
python/kompute/basic/: basic.comp.glsl  basic.py  main.py
python/kompute/info/: info.py
rust/wgpu/: Cargo.toml  Makefile
rust/wgpu/basic/: Cargo.toml  basic.rs
rust/wgpu/basic/src/: main.rs
rust/wgpu/info/: Cargo.toml  info.rs
